[package]
name = "ato"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
clap = { version= "4.5.1", features=["derive"] }
md-5 = "0.10.6"
walkdir="2.5.0"

[[bin]]
name = "ato"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
panic = 'abort'
opt-level = 3
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1